# a-bit-rusty

./: .gitignore  Cargo.toml  README.md  client.html  coverage.cobertura.xml
.github/: pull_request_template.md
.github/workflows/: build.yml  coverage.yml  test.yml
logic_core/: Cargo.toml
logic_core/src/: lib.rs  main.rs
logic_core/src/chip/: chip.rs  chip_description.rs  circuit.rs  circuit_board.rs  mod.rs  types.rs
logic_core/src/chip/tests/: mod.rs  test_chip.rs  test_chip_description.rs  test_circuit.rs  test_circuit_board.rs  test_circuit_description.rs  test_designer.rs
logic_gui/: Cargo.toml
logic_gui/src/: chip_view.rs  lib.rs  main.rs
src/: lib.rs  main.rs
src/chip/: chip.rs  chip_database.rs  chip_description.rs  circuit.rs  circuit_builder.rs  circuit_description.rs  compiler.rs  designer.rs  mod.rs  nand.rs  nand_chip.rs  tickable.rs  trace.rs  types.rs
src/chip/tests/: mod.rs  test_chip.rs  test_chip_database.rs  test_chip_description.rs  test_circuit.rs  test_circuit_board.rs  test_circuit_builder.rs  test_circuit_description.rs  test_designer.rs  test_nand.rs  test_trace.rs
src/component/: component.rs  mod.rs  nand_gate.rs  test_nand_gate.rs
src/component/tests/: mod.rs  test_component.rs  test_nand_gate.rs
tests/: integration_test.rs
