[package]
name = "logic_core"
version = "0.1.0"
edition = "2024"

[dependencies]
ntest = "0.9.3"
nalgebra = "0.33.2"
axum = { version = "0.8.4", features = ["ws"] }
tokio = { version = "1.44.2", features = ["macros", "rt-multi-thread"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
